--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <title>Upload Tweets to Google Sheet</title>
 </head>
 <body>
-    <h1>Upload Tweets</h1>
+    <h1>This application reads  108 tweets from the file shared makes a table format and add a sheet in digiMahanth sheet</h1> <h1>upload Tweets</h1>
+    <h2>Select a file which as todays tweet. ex:  <a href="">Tweets.txt</a></h2>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" name="file" id="file" required />
         <button type="submit">Upload</button>
