--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>This application reads  108 tweets from the file shared makes a table format and add a sheet in digiMahanth sheet</h1> <h1>upload Tweets</h1>
-    <h2>Select a file which as todays tweet. ex:  <a href="">Tweets.txt</a></h2>
+    <h2>Select a file which as todays tweet. ex:  <a href="">https://tweettable.onrender.com/tweets.txt</a></h2>
+    <a 
+    href="https://docs.google.com/spreadsheets/d/1vP5u0XYnbI5tcAIkmrr3PG4MeZ5bl-xdIIp-S62tD7Y/edit?gid=1251501015#gid=1251501015"/>
+    <h2>digiMahanth sheet</h2> 
+    </a>
+</h2>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" name="file" id="file" required />
         <button type="submit">Upload</button>
