--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
       form,
       textarea,
       button,
+      file,
       a {
         margin-top: 20px;
         display: inline-block;
@@ -99,15 +100,14 @@
 
     <h1>Upload and Process Tweets</h1>
     <h2>Select a file with today's tweets or paste tweets directly below.</h2>
+    <a href="https://tweettable.onrender.com/tweet.txt"
+      >Example file: tweets.txt</a
+    >
     <h2>
-      Example file:
-      <a href="https://tweettable.onrender.com/tweet.txt">tweets.txt</a>
-    </h2>
-    <h2>
-      Access the sheet here:
+      Click Open the current Digital Mahanth sheet :
       <a
         href="https://docs.google.com/spreadsheets/d/1vP5u0XYnbI5tcAIkmrr3PG4MeZ5bl-xdIIp-S62tD7Y/edit?gid=1251501015#gid=1251501015"
-        >digiMahanth Sheet</a
+        >DigiMahanth Sheet 2024</a
       >
     </h2>
 
